<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >
    <include
        layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#fff"
                app:cardCornerRadius="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp">
                        <TextView
                            android:textColor="#000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meetingTheme"
                            android:textSize="20dp"/>

                        <TextView
                            android:id="@+id/tv_meetingTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meetingTheme"
                            android:textSize="20dp"
                            android:layout_marginLeft="20dp"/>

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.6dp"
                        android:background="#ccc"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp">
                        <TextView
                            android:textColor="#000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/createUser"
                            android:textSize="20dp"/>

                        <TextView
                            android:id="@+id/tv_createUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user"
                            android:textSize="20dp"
                            android:layout_marginLeft="20dp"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.6dp"
                        android:background="#ccc"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp">
                        <TextView
                            android:textColor="#000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/beginTime"
                            android:textSize="20dp"/>

                        <TextView
                            android:id="@+id/tv_meetingTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="13:10"
                            android:textSize="20dp"
                            android:layout_marginLeft="20dp"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.6dp"
                        android:background="#ccc"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:id="@+id/lay_users"
                        android:clickable="true">
                        <TextView
                            android:textColor="#000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alluser"
                            android:textSize="20dp"/>

                        <TextView
                            android:id="@+id/tv_all_user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="test"
                            android:textSize="20dp"
                            android:layout_marginLeft="20dp"/>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <Button
                android:id="@+id/btn_exit"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="20dp"
                android:background="#f45"
                android:layout_marginTop="30dp"
                android:text="@string/exit"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>


